--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.emerchantpay.gateway</groupId>
 	<artifactId>genesis-java</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.1</version>
 	<name>Genesis Gateway Java Client Library</name>
 	<description>Java Client Library for Genesis Gateway</description>
 	<url>https://www.emerchantpay.com</url>
@@ -32,7 +32,7 @@
 		<developerConnection>
        ${scmConnection}
      </developerConnection>
-		<tag>1.0.0</tag>
+		<tag>1.0.1</tag>
 	</scm>
 
 	<distributionManagement>
@@ -101,10 +101,14 @@
 						<configuration>
 							<show>private</show>
 							<nohelp>true</nohelp>
+							<additionalparam>-Xdoclint:none</additionalparam>
 						</configuration>
 						<executions>
 							<execution>
 								<phase>package</phase>
+								<goals>
+									<goal>jar</goal>
+								</goals>
 							</execution>
 						</executions>
 					</plugin>
@@ -122,7 +126,7 @@
 						<executions>
 							<execution>
 								<id>attach-sources</id>
-								<phase>verify</phase>
+								<phase>package</phase>
 								<goals>
 									<goal>jar-no-fork</goal>
 								</goals>
