--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.emerchantpay.gateway</groupId>
 	<artifactId>genesis-java</artifactId>
-	<version>1.2.0</version>
+	<version>1.2.1</version>
 	<name>Genesis Gateway Java Client Library</name>
 	<description>Java Client Library for Genesis Gateway</description>
 	<url>https://www.emerchantpay.com</url>
@@ -32,7 +32,7 @@
 		<developerConnection>
        ${scmConnection}
      </developerConnection>
-		<tag>1.2.0</tag>
+		<tag>1.2.1</tag>
 	</scm>
 
 	<distributionManagement>
@@ -60,7 +60,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.8.1</version>
+			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -175,6 +175,7 @@
 					</excludes>
 					<disableXmlReport>true</disableXmlReport>
 					<useFile>false</useFile>
+					<trimStackTrace>false</trimStackTrace>
 				</configuration>
 			</plugin>
 
