--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.emerchantpay.gateway</groupId>
 	<artifactId>genesis-java</artifactId>
-	<version>1.8.0</version>
+	<version>1.9.0</version>
 	<name>Genesis Gateway Java Client Library</name>
 	<description>Java Client Library for Genesis Gateway</description>
 	<url>https://www.emerchantpay.com</url>
@@ -32,7 +32,7 @@
 		<developerConnection>
        ${scmConnection}
      </developerConnection>
-		<tag>1.8.0</tag>
+		<tag>1.9.0</tag>
 	</scm>
 
 	<distributionManagement>
@@ -67,6 +67,16 @@
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
 			<version>2.19.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.9.8</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-xml</artifactId>
+			<version>2.9.7</version>
 		</dependency>
 	</dependencies>
 
