--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.emerchantpay.gateway</groupId>
 	<artifactId>genesis-java</artifactId>
-	<version>1.17.0</version>
+	<version>1.17.1</version>
 	<name>Genesis Gateway Java Client Library</name>
 	<description>Java Client Library for Genesis Gateway</description>
 	<url>https://www.emerchantpay.com</url>
@@ -32,7 +32,7 @@
 		<developerConnection>
        ${scmConnection}
      </developerConnection>
-		<tag>1.17.0</tag>
+		<tag>1.17.1</tag>
 	</scm>
 
 	<distributionManagement>
@@ -60,28 +60,23 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.13.1</version>
+			<version>4.13.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>3.5.13</version>
+			<version>4.6.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
-			<version>2.11.3</version>
+			<version>2.13.3</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.dataformat</groupId>
 			<artifactId>jackson-dataformat-xml</artifactId>
-			<version>2.11.3</version>
-		</dependency>
-		<dependency>
-			<groupId>xalan</groupId>
-			<artifactId>xalan</artifactId>
-			<version>2.7.2</version>
+			<version>2.13.3</version>
 		</dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -193,7 +188,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.0</version>
+				<version>3.0.0-M7</version>
 				<configuration>
 					<excludes>
 						<exclude>**/integrationtest/**</exclude>
@@ -207,7 +202,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>2.22.0</version>
+				<version>3.0.0-M7</version>
 				<executions>
 					<execution>
 						<goals>
@@ -221,7 +216,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
-				<version>2.5.3</version>
+				<version>3.0.0-M6</version>
 				<configuration>
 					<mavenExecutorId>forked-path</mavenExecutorId>
 					<checkModificationExcludes>
@@ -233,7 +228,7 @@
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
-				<version>2.5.4</version>
+				<version>5.1.7</version>
 				<extensions>true</extensions>
 				<configuration>
 					<instructions>
