--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.emerchantpay.gateway</groupId>
 	<artifactId>genesis-java</artifactId>
-	<version>1.17.6</version>
+	<version>1.18.4</version>
 	<name>Genesis Gateway Java Client Library</name>
 	<description>Java Client Library for Genesis Gateway</description>
 	<url>https://www.emerchantpay.com</url>
@@ -32,7 +32,7 @@
 		<developerConnection>
        ${scmConnection}
      </developerConnection>
-		<tag>1.17.6</tag>
+		<tag>1.18.4</tag>
 	</scm>
 
 	<distributionManagement>
@@ -66,22 +66,22 @@
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>4.8.0</version>
+			<version>4.11.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
-			<version>2.13.4</version>
+			<version>2.18.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.dataformat</groupId>
 			<artifactId>jackson-dataformat-xml</artifactId>
-			<version>2.13.4</version>
+			<version>2.18.0</version>
 		</dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-text</artifactId>
-            <version>1.10.0</version>
+            <version>1.12.0</version>
         </dependency>
 	</dependencies>
 
@@ -240,6 +240,19 @@
 							com.emerchantpay.gateway.util;-noimport:=true,
 							com.emerchantpay.gateway.test;-noimport:=true
 						</Export-Package>
+                        <_exportcontents>
+                            com.emerchantpay.gateway.api;-noimport:=true,
+                            com.emerchantpay.gateway.api.constants;-noimport:=true,
+                            com.emerchantpay.gateway.api.interfaces;-noimport:=true,
+                            com.emerchantpay.gateway.api.interfaces.financial.traveldata;-noimport:=true,
+                            com.emerchantpay.gateway.api.interfaces.customerinfo;-noimport:=true,
+                            com.emerchantpay.gateway.api.interfaces.financial;-noimport:=true,
+                            com.emerchantpay.gateway.api.validation;-noimport:=true,
+                            com.emerchantpay.gateway.api.requests.financial.traveldata;-noimport:=true,
+                            com.emerchantpay.gateway.api.requests.financial.apm;-noimport:=true,
+                            com.emerchantpay.gateway.model;-noimport:=true,
+                            com.emerchantpay.gateway.model.klarna;-noimport:=true
+                        </_exportcontents>
 						<Implementation-Title>${project.name}</Implementation-Title>
 						<Implementation-Version>${project.version}</Implementation-Version>
 					</instructions>
